# confidential-compliance-auditor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/cca_poc/: main.py  test_cca_flow.py
tests/: test_cca.py
